# pyfarplot

./: .gitignore  LICENSE  README.md  pyproject.toml  tutorial.md
examples/: basic.py  examples.py
farplot/: __init__.py  _core.py
